Archive2/50/6c2a26403cd483/output
main.cpp: In member function 'int GuardedArray<NN>::insertObject(std::function<void()>)':
main.cpp:59:5: warning: no return statement in function returning non-void [-Wreturn-type]
     };
     ^
main.cpp: At global scope:
main.cpp:66:11: error: '::main' must return 'int'
 void main(){}
           ^
